# libmysqlcppconn-conan

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  config.yml
.docker/: Dockerfile.ubuntudev
all/: conandata.yml  conanfile.py
all/include/: mysql-connector-cxx.h
all/src/: mysql-connector-cxx.cpp
all/test_package/: CMakeLists.txt  CMakeUserPresets.json
all/test_package/src/: example.cpp
test_package/: CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
